--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^3.11.1",
+    "gatsby-plugin-catch-links": "^3.12.0",
+    "gatsby-plugin-mdx": "^2.12.0",
+    "gatsby-remark-double-brackets-link": "^0.1.11",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-markdown-references": "^0.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
