--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-force-graph": "^1.41.7"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "2.3.2"
   }
 }
