--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.11.1",
     "gatsby-plugin-catch-links": "^3.12.0",
     "gatsby-plugin-mdx": "^2.12.0",
+    "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-remark-double-brackets-link": "^0.1.11",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-force-graph": "^1.41.7"
+    "react-force-graph": "^1.41.7",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
