--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.11.1",
     "gatsby-plugin-catch-links": "^3.12.0",
     "gatsby-plugin-mdx": "^2.12.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-remark-double-brackets-link": "^0.1.11",
     "gatsby-source-filesystem": "^3.12.0",
@@ -27,6 +28,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-force-graph": "^1.41.7",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
