--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.11.1",
     "gatsby-plugin-catch-links": "^3.12.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-remark-double-brackets-link": "^0.1.11",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
+    "hamburger-react": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
