Added filtering & responsive styles to the garden

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.11.1",
     "gatsby-plugin-catch-links": "^3.12.0",
