--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-mdx": "^2.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-styled-components": "^4.12.0",
@@ -35,6 +36,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-force-graph": "^1.41.7",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
