--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@react-hook/window-size": "^3.0.7",
+    "@loadable/component": "^5.15.0",
     "babel-plugin-styled-components": "^1.13.2",
+    "browser-monads": "^1.0.0",
     "gatsby": "^3.11.1",
     "gatsby-plugin-catch-links": "^3.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
