--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.2",
     "browser-monads": "^1.0.0",
-    "gatsby": "^3.11.1",
+    "gatsby": "^4.2.0",
     "gatsby-plugin-catch-links": "^3.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
+    "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
