--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-mdx": "^2.12.0",
+    "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-remark-double-brackets-link": "^0.1.11",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
     "gatsby-transformer-remark": "^4.9.0",
-    "gatsby-transformer-sharp": "^3.12.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "hamburger-react": "^2.4.1",
+    "lmdb-store": "^1.6.14",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
