--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
     "babel-plugin-styled-components": "^1.13.2",
     "browser-monads": "^1.0.0",
     "gatsby": "^4.2.0",
-    "gatsby-plugin-catch-links": "^3.12.0",
+    "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby-plugin-mdx": "^2.14",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^4.12.0",
-    "gatsby-remark-double-brackets-link": "^0.1.11",
-    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-remark-wiki-link": "^0.3.1",
+    "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
-    "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "hamburger-react": "^2.4.1",
     "lmdb-store": "^1.6.14",
