--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@loadable/component": "^5.15.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@tippyjs/react": "^4.2.6",
     "babel-plugin-styled-components": "^1.13.2",
     "browser-monads": "^1.0.0",
     "gatsby": "^4.2.0",
@@ -51,5 +52,10 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "2.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-emoji"
+    }
   }
 }
