--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tippyjs/react": "^4.2.6",
     "babel-plugin-styled-components": "^1.13.2",
     "browser-monads": "^1.0.0",
+    "framer-motion": "^5.5.5",
     "gatsby": "^4.2.0",
     "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
