🎉 feat: adding google and vercel analytics

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^4.2.0",
     "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^4.5.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-mdx": "^2.14",
@@ -32,6 +33,7 @@
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^4.12.0",
+    "gatsby-plugin-vercel": "^1.0.3",
     "gatsby-remark-wiki-link": "^0.3.1",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-markdown-references": "^0.1.8",
