--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "my-gatsby-site",
-  "version": "1.0.0",
+  "name": "ellyloel.com",
+  "version": "3.0.0",
   "private": true,
-  "description": "My Gatsby Site",
-  "author": "“Elly",
+  "description": "This is my own lovely little corner of the internet. Look forward to plenty of interesting ideas & projects.",
+  "author": "Elly Loel",
   "keywords": [
     "gatsby"
   ],
@@ -18,21 +18,20 @@
     "@loadable/component": "^5.15.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@stitches/react": "^1.2.6",
     "@tippyjs/react": "^4.2.6",
-    "babel-plugin-styled-components": "^1.13.2",
     "browser-monads": "^1.0.0",
     "framer-motion": "^5.5.5",
     "gatsby": "^4.2.0",
     "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^4.5.0",
-    "gatsby-plugin-image": "^1.12.0",
+    "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-mdx": "^2.14",
-    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-mdx": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-plugin-vercel": "^1.0.3",
     "gatsby-remark-wiki-link": "^0.3.1",
     "gatsby-source-filesystem": "^4.3.0",
@@ -45,8 +44,7 @@
     "react-dom": "^17.0.1",
     "react-force-graph": "^1.41.7",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.3.0"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
