--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
     "react/no-unescaped-entities": "off",
     "no-console": "warn",
     "prettier/prettier": "error",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "sort-imports": "error",
+    "sort-keys": "error",
+    "sort-vars": "error"
   }
 }
