--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accessible-icon": "^0.1.4",
     "@radix-ui/react-navigation-menu": "^0.1.2",
     "@radix-ui/react-visually-hidden": "^0.1.4",
@@ -27,17 +28,18 @@
     "react-icons": "^4.3.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
-    "rehype-slug": "^5.0.1"
+    "rehype-slug": "^5.0.1",
+    "storybook-addon-next-router": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-actions": "^6.4.21",
+    "@storybook/addon-essentials": "^6.4.21",
+    "@storybook/addon-interactions": "^6.4.21",
+    "@storybook/addon-links": "^6.4.21",
+    "@storybook/builder-webpack5": "^6.4.21",
+    "@storybook/manager-webpack5": "^6.4.21",
+    "@storybook/react": "^6.4.21",
     "@storybook/testing-library": "^0.0.9",
     "@types/glob": "^7.2.0",
     "@types/react": "^17.0.38",
@@ -47,7 +49,7 @@
     "eslint": "^8.11.0",
     "eslint-config-next": "^12.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-storybook": "^0.5.7",
+    "eslint-plugin-storybook": "^0.5.8",
     "prettier": "^2.6.1",
     "typescript": "^4.5.4",
     "webpack": "^5.70.0"
