--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-accessible-icon": "^0.1.4",
     "@radix-ui/react-navigation-menu": "^0.1.2",
     "@radix-ui/react-visually-hidden": "^0.1.4",
+    "@react-hook/resize-observer": "^1.2.5",
     "@stitches/react": "^1.2.7",
     "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
@@ -22,12 +23,14 @@
     "next-mdx-remote": "^4.0.0",
     "next-pwa": "^5.4.6",
     "open-props": "^1.3.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-force-graph": "^1.41.12",
     "react-icons": "^4.3.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
+    "remark-wiki-link": "^1.0.4",
     "storybook-addon-next-router": "^3.1.1"
   },
   "devDependencies": {
@@ -41,7 +44,8 @@
     "@storybook/react": "^6.4.21",
     "@storybook/testing-library": "^0.0.9",
     "@types/glob": "^7.2.0",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.4",
