--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.6",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accessible-icon": "^0.1.4",
     "@radix-ui/react-navigation-menu": "^0.1.2",
+    "@radix-ui/react-toggle-group": "^0.1.5",
     "@radix-ui/react-visually-hidden": "^0.1.4",
     "@react-hook/resize-observer": "^1.2.5",
     "@stitches/react": "^1.2.7",
+    "@types/mdx": "^2.0.2",
     "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
     "next": "^12.1.0",
