📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -225,7 +225,11 @@
     "Welp",
     "visualisable",
     "Visualisable",
-    "Prioritise"
+    "Prioritise",
+    "Obsidian",
+    "G3223Q",
+    "144hz",
+    "IFK"
   ],
   "vimMode": true,
   "promptDelete": false,
