--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "a52e507b6425c4fc",
+        "id": "6e15c37a17d0c46d",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -91,6 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "src/uses.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,7 +108,7 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "a52e507b6425c4fc",
+  "active": "6e15c37a17d0c46d",
   "lastOpenFiles": [
     "src/uses.md",
     "src/index.md",
