📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -229,7 +229,8 @@
     "Obsidian",
     "G3223Q",
     "144hz",
-    "IFK"
+    "IFK",
+    "PTX"
   ],
   "vimMode": true,
   "promptDelete": false,
