--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "6e15c37a17d0c46d",
+        "id": "f6d59f7ed3a94d45",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/speaking.md",
+            "file": "src/projects/Modern CSS reset.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/speaking.md"
+                "file": "src/projects/Modern CSS reset.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/speaking.md",
+                "file": "src/projects/Modern CSS reset.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -108,17 +108,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "6e15c37a17d0c46d",
+  "active": "f6d59f7ed3a94d45",
   "lastOpenFiles": [
-    "src/speaking.md",
+    "src/projects/Modern CSS reset.md",
+    "src/projects.md",
     "src/now.md",
+    "src/speaking.md",
+    "node_modules/@types/cors/README.md",
+    "node_modules/bs-recipes/recipes/gulp.ruby.sass/desc.md",
+    "node_modules/encodeurl/README.md",
+    "node_modules/fs-extra/docs/emptyDir.md",
     "src/garden/ADHD.md",
-    "src/garden/Altruism.md",
-    "src/projects/a-real-af-project.md",
-    "src/about.md",
-    "src/blog.md",
-    "src/garden.md",
-    "src/index.md",
-    "src/projects.md"
+    "src/garden/Altruism.md"
   ]
 }
