📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,20 +6,22 @@
   "attachmentFolderPath": "misc/Assests",
   "alwaysUpdateLinks": true,
   "mobileToolbarCommands": [
+    "editor:toggle-keyboard",
     "editor:insert-wikilink",
     "editor:move-caret-left",
     "editor:move-caret-right",
     "editor:move-caret-up",
     "editor:move-caret-down",
+    "editor:context-menu",
     "editor:paste",
     "editor:insert-embed",
     "editor:attach-file",
-    "editor:set-heading",
+    "editor:toggle-code",
+    "editor:insert-callout",
     "editor:toggle-bold",
     "editor:toggle-italics",
     "editor:toggle-strikethrough",
     "editor:toggle-highlight",
-    "editor:toggle-checklist-status",
     "editor:indent-list",
     "editor:unindent-list",
     "editor:undo",
