--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-navigation": "^0.3.3",
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
+    "@parcel/css": "^1.10.1",
     "@radix-ui/colors": "^0.1.8",
     "open-props": "^1.3.9"
   },
