--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@parcel/css": "^1.10.1",
     "@radix-ui/colors": "^0.1.8",
-    "open-props": "^1.3.9"
+    "browserslist": "^4.21.1",
+    "open-props": "^1.3.9",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
