--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "open-props": "^1.4.1",
     "postcss-preset-env": "^7.7.2",
     "rollup": "^2.76.0",
-    "stylized-text": "^1.0.4",
+    "stylized-text": "1.0.9",
     "tslib": "^2.4.0",
     "twemoji": "^14.0.2"
   },
