--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "0cdbeea4f3216eb3",
+        "id": "2ae207f631f318dc",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "src/blog/Holy shit there's so much CSS.md",
-            "mode": "source",
-            "backlinks": false,
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -80,9 +75,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "src/blog/Holy shit there's so much CSS.md"
-              }
+              "state": {}
             }
           },
           {
@@ -91,7 +84,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/blog/Holy shit there's so much CSS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,8 +101,9 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "185612779993f727",
+  "active": "2ae207f631f318dc",
   "lastOpenFiles": [
+    "src/blog/Holy shit there's so much CSS.md",
     "src/blog/Untitled.md",
     "src/garden/Obsidian Git xcrun error.md",
     "src/speaking.md",
@@ -119,7 +112,6 @@
     "src/projects/Modern CSS reset.md",
     "src/about.md",
     "src/now.md",
-    "src/garden/YAML is strict.md",
-    "src/projects.md"
+    "src/garden/YAML is strict.md"
   ]
 }
