--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -111,6 +111,8 @@
   },
   "active": "2ae207f631f318dc",
   "lastOpenFiles": [
+    "src/projects/Modern CSS reset.md",
+    "src/projects/stylized-text.md",
     "src/about.md",
     "src/uses.md",
     "src/speaking.md",
@@ -118,8 +120,6 @@
     "src/blog/Holy shit there's so much CSS.md",
     "src/blog/Untitled.md",
     "src/garden/Obsidian Git xcrun error.md",
-    "src/bookmarks/Atomic Habits by James Clear.md",
-    "src/projects/stylized-text.md",
-    "src/projects/Modern CSS reset.md"
+    "src/bookmarks/Atomic Habits by James Clear.md"
   ]
 }
