--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/Finding the perfect app.md",
+            "file": "src/garden/How to get stuff done when you have ADHD.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/Finding the perfect app.md"
+                "file": "src/garden/How to get stuff done when you have ADHD.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/Finding the perfect app.md",
+                "file": "src/garden/How to get stuff done when you have ADHD.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -111,6 +111,8 @@
   },
   "active": "2ae207f631f318dc",
   "lastOpenFiles": [
+    "src/garden/Habit Creation.md",
+    "src/garden/Finding the perfect app.md",
     "src/garden/Executive function.md",
     "src/garden/Estimating time for tasks.md",
     "src/garden/Digital Garden.md",
@@ -118,8 +120,6 @@
     "src/garden/Composition over Inheritance.md",
     "src/garden/Atomic.md",
     "src/garden/Altruism.md",
-    "src/garden/ADHD.md",
-    "src/projects/stylized-text.md",
-    "src/projects/Modern CSS reset.md"
+    "src/garden/ADHD.md"
   ]
 }
