📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -232,7 +232,8 @@
     "G3223Q",
     "144hz",
     "IFK",
-    "PTX"
+    "PTX",
+    "dopamenu"
   ],
   "vimMode": true,
   "promptDelete": false,
