--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/How to get stuff done when you have ADHD.md",
+            "file": "src/garden/Multi-factor authentication.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/How to get stuff done when you have ADHD.md"
+                "file": "src/garden/Multi-factor authentication.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/How to get stuff done when you have ADHD.md",
+                "file": "src/garden/Multi-factor authentication.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -111,15 +111,15 @@
   },
   "active": "2ae207f631f318dc",
   "lastOpenFiles": [
+    "src/garden/Inexplicable lack of accomplishment.md",
+    "src/garden/Inattentive.md",
+    "src/garden/How to give your brain the stimulation it needs.md",
+    "src/garden/How to get stuff done when you have ADHD.md",
     "src/garden/Habit Creation.md",
     "src/garden/Finding the perfect app.md",
     "src/garden/Executive function.md",
     "src/garden/Estimating time for tasks.md",
     "src/garden/Digital Garden.md",
-    "src/garden/Creativity and imagination.md",
-    "src/garden/Composition over Inheritance.md",
-    "src/garden/Atomic.md",
-    "src/garden/Altruism.md",
-    "src/garden/ADHD.md"
+    "src/garden/Creativity and imagination.md"
   ]
 }
